k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-service-ns
  labels:
    project: task-service
    environment: development
